compiler/testData/diagnostics/tests/cast/AsArray.kt
fun f(x: Any) = x <!UNCHECKED_CAST!>as Array<String><!>